# yts

./: .gitignore  pyproject.toml
lib/openmct/: dictionary.json
lib/openmct/example-server/: spacecraft.js
lib/yamcs/examples/simulation/src/main/yamcs/displays/: FlightData.opi  Plots and TM.opi  main.opi  supervisor-controls.opi  top-bar.opi
lib/yamcs/examples/simulation/src/main/yamcs/mdb/: landing.xls  simulator-ccsds.xls
lib/yamcs/examples/simulation/src/main/yamcs/mdb/tse/: simulator.xls
lib/yamcs/tests/src/test/java/org/yamcs/algorithms/: AlgorithmManagerJavaExprTest.java  AlgorithmManagerJavaTest.java  AlgorithmManagerPyTest.java  AlgorithmManagerTest.java
lib/yamcs/yamcs-core/src/test/resources/xtce/: BogusSAT-1.xml
lib/yamcs/yamcs-xtce/src/test/resources/: BogusSAT-1.xml
scripts/: open_mct_tlm_sim.py  run_app.py  startC2s.ps1  yamcs_tlm_sim.py
src/app/: app.py
src/app/components/: appshell.py  header.py  navbar.py
src/app/lib/: constants.py  utils.py
src/app/lib/directives/: kwargs.py
src/app/pages/: __init__.py  agc_monitor.py  home.py  markdown.py  not_found_404.py
src/yts/demos/: agc_monitor.py
src/yts/sys/: open_mct.py  open_meteo.py  yamcs.py
tests/: demo.py  demodash.py  open_mct_socket.py  open_mct_tlm.py  yamcs_tlm.py
