[tool.poetry]
name = "yts"
version = "0.1.1"
description = "Code for You There Solutions"
authors = ["Mihir Uppal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.0.0"
dash-iconify = "^0.1.0"
requests = "^2.27.1"
python-frontmatter = "^1.0.0"
dash-mantine-components = "^0.14"
markdown2dash = "^0.1"
pydantic = "^2.3.0"
gunicorn = "^21.2.0"
pandas = "^2.2.3"
websockets = "^13.1"
selenium = "^4.26.1"
yamcs-client = "^1.10.0"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


packages = [
    { include = "app", from = "src" },
    { include = "yts", from = "src" }
]